# qt_rzd_test

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  rzd_not_respond.json  version.h.in
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Deploy.in.h  app.qss  main.cpp  qml.qrc
src/client/entity/: IConfigProducer.h  Route.cpp  Route.h  RoutesAgregate.cpp  RoutesAgregate.h  RoutesCategory.h
src/client/ui/application/: CategoriesFrame.cpp  CategoriesFrame.h  DetailsFrame.cpp  DetailsFrame.h  IFramePage.h  MainWindow.cpp  MainWindow.h  SearchFrame.cpp  SearchFrame.h  SummaryFrame.cpp  SummaryFrame.h
src/client/ui/controller/: GameController.cpp  GameController.h  IController.h  NetworkImageController.cpp  NetworkImageController.h
src/client/ui/delegate/: GroupInfo.cpp  GroupInfo.h
src/client/ui/model/: GameBoard.cpp  GameBoard.h
src/client/ui/qml/: main.qml
src/client/ui/qml/entity/: GameBoard.qml  Tile.qml  qmldir
src/client/ui/test/: MockController.h
src/utils/: CMakeLists.txt
src/utils/json/: JsonLoader.cpp  JsonLoader.h
src/utils/network/: NetworkLoader.cpp  NetworkLoader.h
